# KnowingEye

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Function/: SoundEffect.cpp  SoundEffect.h  SpeechGeneration.cpp  SpeechGeneration.h  Tesseract.cpp  Tesseract.h
